src/css/layout/_layout.scss
/* ... */
.peaks::before,
.peaks::after {
	    background-size: 25px 100%;
	    display: block;
	    height: 90px;
	    left: 0;
	    right: 0;
	    z-index: 10;	
	    content: "";	
	}


	.peaks::before {
		background-image: linear-gradient(315deg, #7D552F 25%, rgba(0, 0, 0, 0) 25%), linear-gradient(45deg, #CC962C 25%, rgba(0, 0, 0, 0) 25%);
		background-position: 50% center;
		top: -90px;		
	}
	.peaks::after {
	    background-image: linear-gradient(135deg, #506b08 25%, rgba(0, 0, 0, 0) 25%), linear-gradient(225deg, #9baf70 25%, rgba(0, 0, 0, 0) 25%);
	    background-position: 50% center;
	    top: 100%;
	}






// MOBILE MENU
.mobileMenu {
	opacity: 0;
	transition: all 0.6s ease;

	&__trigger {
		width: 50px;
		height: 50px;
		background-color: $red;
		position: fixed;
		bottom: 8%;
		right: 8%;
		border-radius: 50%;
		z-index: 1000000;

		ul {
			display: flex;
			flex-direction: column;
			height: 30px;
			width: 50px;
			justify-content: space-evenly;
			align-items: flex-end;
			top: 10px;
			position: relative;
			right: 11px;

			li {
				width: 30px;
				height: 3px;
				background-color: #fff;
				border-radius: 2px;
				transition: all 0.1s ease;

				&:last-child {
					width: 21px;
				}
			}
		}

		&.cross {
			ul {
				li {
					transition: all 0.1s ease;					

					&:first-child {
						background-color: gray;
						transform: rotate(-45deg);
						width: 35px;
						position: relative;
						top: 8px;
						left: 4px;
					}
					&:nth-child(2)  {
						background-color: gray;
						transform: rotate(45deg);
						width: 35px;
						position: relative;						
						left: 3px;
					}
					&:last-child {
						width: 0;
					}
				}

			}
		}
	}

	&.visible {
		opacity: 1;
	}
	
	@media (min-width: 600px) {
		display: none;
		transition: all 0.6s ease;
	}
}

.mobileMenuOverlay {
	height: 0;
	width: 0;
	position: fixed;
	bottom: 0;
	right: 0;
	opacity: 0;	
	background-color: #212121;
	padding-top: 70px;
	overflow: hidden;

	transition: all 0.3s ease;

	h3 {
		text-align: center;
		position: absolute;
		bottom: 1em;
		width: 100%;
		left: 0;
		font-size: 0.75em;
	}

	nav {
		$shadowColor: #248CB6;
		$shadowColor: $thirdColor;

		ul {
			
			li {
			    box-shadow: 0px 2px 4px 0px $shadowColor;
			    padding: 5px 0;
				a {
					font-size: 0;
					color: #212121;
					transition: all 0.3s ease;
					display: block;
					padding: 0.3em 0 0.3em 1em;

					.mobIcon {
						width: 20px;
						height: 20px;
						display: inline-block;
						vertical-align: top;
						
						&.home {
							background: url(../pics/home.svg) 0 0/contain no-repeat transparent;
						}
						&.whoIam {
							background: url(../pics/whoami.svg) 0 0/contain no-repeat transparent;
						}
						&.skills {
							background: url(../pics/ninja2.svg) 0 0/contain no-repeat transparent;
						}
						&.workExperience {
							background: url(../pics/espartan.svg) 0 0/contain no-repeat transparent;
						}
						&.contact {
							background: url(../pics/contacto2.svg) 0 0/contain no-repeat transparent;
						}
					}

					.mobText {

					}
				}

				&:first-child {
					box-shadow: 0px -2px 4px 0px $shadowColor, 0px 2px 4px 0px $shadowColor;				
				}
			}
		}
	}


	&.opened {
		transition: all 0.3s ease;
		opacity: 1;
		width: 100%;
		height: 100vh;
		z-index: 100000;

		nav {
			margin: 1em 0 4em;

			ul li {
	
				a {
					font-size: 1em;
					line-height: 20px;
					color: #fff;
					transition: all 0.3s ease;
				}
			}
		}
	}

	p {
	    border-bottom: 1px solid;
	    border-top: 1px solid;
	    border-color: #396f15;
	    margin: 1.5em 0;
	    padding: 0 1em;

		a {
		    // color: #fff;
		    // line-height: 36px;
		    // display: block;
		    // font-size: 0.9em;		    
		    display: flex;
		    align-items: center;
		    height: 32px;

		    >span {
		    	margin-right: 0.5em;

		    	&:first-child {

		    	}
		    	&:last-child {
				    color: #fff;
				    // line-height: 36px;
				    // display: block;
				    font-size: 0.9em;		    		    		
		    	}
		    }

			.pdfIcon {
				display: block;
				background: url(../pics/pdficon.svg) 0 0 no-repeat transparent;
				background-size: contain;
				width: 20px;
				height: 20px;
				// vertical-align: middle;
				// padding-right: 0.3em;
			}

			.linkeinIcon {
				// display: inline-block;
				background: url(../pics/linkedin2.svg) 0 0 no-repeat transparent;
				background-size: contain;
				width: 20px;
				height: 20px;		
				// vertical-align: middle;		
				// padding-right: 0.3em;
			}
		}
	}
}

